--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "vite",
+  "name": "whatsapp-clone",
+  "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -8,10 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.45"
+    "axios": "^1.7.2",
+    "firebase": "^9.23.0",
+    "moment": "^2.29.4",
+    "pinia": "^2.0.28",
+    "pinia-plugin-persistedstate": "^3.0.1",
+    "uuid": "^9.0.0",
+    "vue": "^3.2.45",
+    "vue-material-design-icons": "^5.1.2",
+    "vue-router": "^4.1.6",
+    "vue3-google-login": "^2.0.12"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
-    "vite": "^4.1.0"
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4",
+    "vite": "^4.0.0"
   }
 }
